initial commit portfolio all social

--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
         </div>
         <div class="col-md-4">
             <p>My Social Media</p>
-            <a href="#" target="_blank">
+            <a href="https://www.facebook.com/khan.nawazzzzz" target="_blank">
                 <i class="fab fa-facebook-square fa-2x"></i>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://twitter.com/AADILKHAN59" target="_blank">
                 <i class="fab fa-twitter fa-2x"></i>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.instagram.com/khanaadilnawaz" target="_blank">
                 <i class="fab fa-instagram fa-2x"></i>
             </a>
         </div>
