--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-                <small class="text-muted">Angular JS, HTML5, CSS3, & Bootstrap</small>
+                <small class="text-muted">Angular JS, HTML5, CSS3 & Bootstrap</small>
                 <div class="btn-group">
                     <a href="https://aadil59.github.io/flight-app" class="btn btn-sm btn-outline-danger" target="_blank">
                         View
