--- a/index.html
+++ b/index.html
@@ -118,17 +118,17 @@
             </div>
         </div>
         <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="thumb-1.png" alt="Flight App">
+            <img class="card-img-top" src="todo.png" alt="Todo App">
             <div class="card-body">
-                <h5 class="card-title">A Flight App</h5>
+                <h5 class="card-title">A Todo App</h5>
                 <p class="card-text">
-                    This project was made for a test during recruitment process
+                    Simple Todo App with pure Javascript
                 </p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-                <small class="text-muted">Angular JS, HTML5, CSS3, & Bootstrap</small>
+                <small class="text-muted">Vanilla JS, HTML5, CSS</small>
                 <div class="btn-group">
-                    <a href="https://aadil59.github.io/flight-app" class="btn btn-sm btn-outline-danger" target="_blank">
+                    <a href="https://aadil59.github.io/todo-app" class="btn btn-sm btn-outline-danger" target="_blank">
                         View
                     </a>
                 </div>
