--- a/index.html
+++ b/index.html
@@ -96,8 +96,13 @@
                     <em>Coming soon</em>
                 </p>
             </div>
-            <div class="card-footer">
-                <small class="text-muted">HTML, CSS, JavaScript</small>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+                <small class="text-muted">React & ES6</small>
+                <div class="btn-group">
+                    <a href="https://aadil59.github.io/portfolio" class="btn btn-sm btn-outline-danger" target="_blank">
+                        View
+                    </a>
+                </div>
             </div>
         </div>
         <div class="card mb-4 box-shadow">
