--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
             </div>
         </div>
         <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="https://images.unsplash.com/photo-1521540216272-a50305cd4421?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5433224431f2cb232741669ea1a89dca&auto=format&fit=crop&w=1227&q=80" alt="Calculator Site">
+            <img class="card-img-top" src="thumb-5.png" alt="Calculator Site">
             <div class="card-body">
-                <h5 class="card-title">Calculator Site</h5>
+                <h5 class="card-title">Campaign Scheduler</h5>
                 <p class="card-text">
-                    <em>Coming soon</em>
+                    App to schedule campaigns based on json Data
                 </p>
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
-                <small class="text-muted">React & ES6</small>
+                <small class="text-muted">ES6, Fetch API, JSON, CSS3, Gulp</small>
                 <div class="btn-group">
-                    <a href="https://aadil59.github.io/portfolio" class="btn btn-sm btn-outline-danger" target="_blank">
+                    <a href="https://aadil59.github.io/schedule-campaign" class="btn btn-sm btn-outline-danger" target="_blank">
                         View
                     </a>
                 </div>
