--- a/index.html
+++ b/index.html
@@ -139,6 +139,23 @@
                 </div>
             </div>
         </div>
+        <div class="card mb-4 box-shadow">
+            <img class="card-img-top" src="thumb-6.png" alt="Todo App">
+            <div class="card-body">
+                <h5 class="card-title">Movie App</h5>
+                <p class="card-text">
+                    Movie App to find, filter and explore
+                </p>
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+                <small class="text-muted">themoviedb.org, ES6, GULP, Fetch API</small>
+                <div class="btn-group">
+                    <a href="https://aadil59.github.io/movie-app/dist" class="btn btn-sm btn-outline-danger" target="_blank">
+                        View
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="text-center">
         <a href="#">
