--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
         </div>
         <div class="card mb-4 box-shadow">
-            <img class="card-img-top" src="thumb-6.png" alt="Todo App">
+            <img class="card-img-top" src="thumb-6.PNG" alt="Todo App">
             <div class="card-body">
                 <h5 class="card-title">Movie App</h5>
                 <p class="card-text">
