initial strategink ajdk

--- a/strategink/index.html
+++ b/strategink/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>StrategINK | Home</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/vendor.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 </head>
@@ -36,7 +36,7 @@
                         <a href="who-we-are.html">Who We Are</a>
                         <a href="what-we-do.html">What We Do</a>
                         <a href="what-we-done.html">What We’ve Done</a>
-<!--                        <a href="javascript:void(0);">News & Insights</a>-->
+                        <!--                        <a href="javascript:void(0);">News & Insights</a>-->
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
@@ -127,13 +127,14 @@
                                     <span>With The Prospects</span>
                                 </h4>
                                 <p><strong>StrategINK</strong> <span> is a group of pragmatic and experienced set of
-                                    enthusiasts,
-                                    and have helped
-                                    brands by conceptualising and executing their Geo-expansion program, Sales
-                                    Enablement,
-                                    Account Based Marketing with a hybrid model of Digital and physical marketing tools
-                                    and
-                                    techniques.</span></p>
+                                        enthusiasts,
+                                        and have helped
+                                        brands by conceptualising and executing their Geo-expansion program, Sales
+                                        Enablement,
+                                        Account Based Marketing with a hybrid model of Digital and physical marketing
+                                        tools
+                                        and
+                                        techniques.</span></p>
                             </div>
                         </div>
                     </article>
@@ -227,7 +228,7 @@
                         <div class="col-sm-6 col-md-4">
                             <div class="card-event">
                                 <figure class="card-sm" style="background-image:url('assets/images/2.jpg');">
-                                    <h5 class="location text-uppercase">Bangalore</h5>
+                                    <h5 class="location text-uppercase">Noida</h5>
                                 </figure>
                                 <figcaption class="desc">
                                     <h3 class="title">Small title</h3>
@@ -240,7 +241,7 @@
                         <div class="col-sm-6 col-md-4">
                             <div class="card-event">
                                 <figure class="card-sm" style="background-image:url('assets/images/3.jpg');">
-                                    <h5 class="location text-uppercase">Bangalore</h5>
+                                    <h5 class="location text-uppercase">Pune</h5>
                                 </figure>
                                 <figcaption class="desc">
                                     <h3 class="title">Small title</h3>
@@ -251,7 +252,7 @@
                         <div class="col-sm-6 col-md-4">
                             <div class="card-event">
                                 <figure class="card-sm" style="background-image:url('assets/images/4.jpg');">
-                                    <h5 class="location text-uppercase">Bangalore</h5>
+                                    <h5 class="location text-uppercase">Hyderabad</h5>
                                 </figure>
                                 <figcaption class="desc">
                                     <h3 class="title">Small title</h3>
@@ -262,7 +263,7 @@
                         <div class="col-sm-6 col-md-4">
                             <div class="card-event">
                                 <figure class="card-sm" style="background-image:url('assets/images/5.jpg');">
-                                    <h5 class="location text-uppercase">Bangalore</h5>
+                                    <h5 class="location text-uppercase">New Delhi</h5>
                                 </figure>
                                 <figcaption class="desc">
                                     <h3 class="title">Small title</h3>
@@ -276,7 +277,7 @@
                             <div class="card-event">
                                 <figure class="card-lg" style="background-image:url('assets/images/11.jpg');">
                                     <figcaption class="desc">
-                                        <h5 class="location text-uppercase">Bangalore</h5>
+                                        <h5 class="location text-uppercase">Jaipur</h5>
                                         <h3 class="title">TEDx 2019</h3>
                                         <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                             Architecto, unde?</p>
@@ -289,7 +290,7 @@
                             <div class="card-event">
                                 <figure class="card-sm" style="background-image:url('assets/images/10.jpg');">
                                     <img src="assets/images/10.jpg" alt="" style="max-height: 235px" />
-                                    <h5 class="location text-uppercase">Bangalore</h5>
+                                    <h5 class="location text-uppercase">Chennai</h5>
                                 </figure>
                                 <figcaption class="desc">
                                     <h3 class="title">Small title</h3>
@@ -331,32 +332,32 @@
                 <div class="carouselContainerwrapper">
                     <div class="carouselContainer owl-carousel">
                         <div class="slide">
-                            <p><span class="quoteIcon"></span><span class="text-blue">RT @ProjectWW:.@WeAreArogonaut</span>
-                                has hired a new female CFO. Agency veteran Ana Dixon will lead the shop's financial
-                                health,
-                                fiscal growth, a...</p>
+                            <p><span class="quoteIcon"></span><span class="text-blue">RT
+                                    @ProjectWW:.@WeAreArogonaut</span>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro recusandae natus velit
+                                    officiis esse dignissimos voluptas, a suscipit minima cum eos?...</p>
                             <p class="text-sm">-Martha Bridges(<span class="text-blue">@mbriges</span>) June 6,</p>
                         </div>
                         <div class="slide">
-                            <p><span class="quoteIcon"></span><span class="text-blue">RT @ProjectWW:.@WeAreArogonaut</span>
-                                has hired a new female CFO. Agency veteran Ana Dixon will lead the shop's financial
-                                health,
-                                fiscal growth, a...</p>
-                            <p class="text-sm">-Martha Bridges(<span class="text-blue">@mbriges</span>) June 6,</p>
+                            <p><span class="quoteIcon"></span><span class="text-blue">RT
+                                    @ProjectWW:.@WeAreArogonaut</span>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro recusandae natus velit
+                                    officiis esse dignissimos voluptas, a suscipit minima cum eos?...</p>
+                            <p class="text-sm">-Abhinav SK(<span class="text-blue">@mbriges</span>) June 6,</p>
                         </div>
                         <div class="slide">
-                            <p><span class="quoteIcon"></span><span class="text-blue">RT @ProjectWW:.@WeAreArogonaut</span>
-                                has hired a new female CFO. Agency veteran Ana Dixon will lead the shop's financial
-                                health,
-                                fiscal growth, a...</p>
-                            <p class="text-sm">-Martha Bridges(<span class="text-blue">@mbriges</span>) June 6,</p>
+                            <p><span class="quoteIcon"></span><span class="text-blue">RT
+                                    @ProjectWW:.@WeAreArogonaut</span>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro recusandae natus velit
+                                    officiis esse dignissimos voluptas, a suscipit minima cum eos?...</p>
+                            <p class="text-sm">-John Doe(<span class="text-blue">@mbriges</span>) June 6,</p>
                         </div>
                         <div class="slide">
-                            <p><span class="quoteIcon"></span><span class="text-blue">RT @ProjectWW:.@WeAreArogonaut</span>
-                                has hired a new female CFO. Agency veteran Ana Dixon will lead the shop's financial
-                                health,
-                                fiscal growth, a...</p>
-                            <p class="text-sm">-Martha Bridges(<span class="text-blue">@mbriges</span>) June 6,</p>
+                            <p><span class="quoteIcon"></span><span class="text-blue">RT
+                                    @ProjectWW:.@WeAreArogonaut</span>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro recusandae natus velit
+                                officiis esse dignissimos voluptas, a suscipit minima cum eos?</p>
+                            <p class="text-sm">-Mark Welvet(<span class="text-blue">@mbriges</span>) June 6,</p>
                         </div>
                     </div>
                 </div>
