--- a/strategink/what-we-do.html
+++ b/strategink/what-we-do.html
@@ -28,7 +28,7 @@
                         <a href="who-we-are.html">Who We Are</a>
                         <a class="active" href="what-we-do.html">What We Do</a>
                         <a href="what-we-done.html">What We’ve Done</a>
-                        <a href="javascript:void(0);">News & Insights</a>
+                        <!-- <a href="javascript:void(0);">News & Insights</a> -->
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
@@ -70,7 +70,7 @@
                 <div class="row" id="service2">
                     <div class="col-sm-6 col-md-4">
                         <figure class="service-figure right">
-                            <img src="assets/images/service-caption.jpg" alt="" />
+                            <img src="assets/images/1.JPG" alt="" />
                             <div class="box-illust">
                                 <i class="icon icon-ser-2"></i>
                             </div>
@@ -106,7 +106,7 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <figure class="service-figure">
-                            <img src="assets/images/service-caption.jpg" alt="" />
+                            <img src="assets/images/10.JPG" alt="" />
                             <div class="box-illust">
                                 <i class="icon icon-ser-3"></i>
                             </div>
@@ -116,7 +116,7 @@
                 <div class="row" id="service4">
                     <div class="col-sm-6 col-md-4">
                         <figure class="service-figure right">
-                            <img src="assets/images/service-caption.jpg" alt="" />
+                            <img src="assets/images/13.JPG" alt="" />
                             <div class="box-illust">
                                 <i class="icon icon-ser-4"></i>
                             </div>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <figure class="service-figure">
-                            <img src="assets/images/service-caption.jpg" alt="" />
+                            <img src="assets/images/38.JPG" alt="" />
                             <div class="box-illust">
                                 <i class="icon icon-ser-5"></i>
                             </div>
