--- a/strategink/what-we-done.html
+++ b/strategink/what-we-done.html
@@ -28,7 +28,7 @@
                         <a href="who-we-are.html">Who We Are</a>
                         <a href="what-we-do.html">What We Do</a>
                         <a class="active" href="what-we-done.html">What We’ve Done</a>
-                        <a href="javascript:void(0);">News & Insights</a>
+                        <!-- <a href="javascript:void(0);">News & Insights</a> -->
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
@@ -62,7 +62,7 @@
                         <div class="col-sm-6 col-md-4">
                             <div class="card-event">
                                 <figure class="card-sm" style="background-image:url('assets/images/2.jpg');">
-                                    <h5 class="location text-uppercase">Bangalore</h5>
+                                    <h5 class="location text-uppercase">Noida</h5>
                                 </figure>
                                 <figcaption class="desc">
                                     <h3 class="title">Small title</h3>
@@ -75,7 +75,7 @@
                         <div class="col-sm-6 col-md-4">
                             <div class="card-event">
                                 <figure class="card-sm" style="background-image:url('assets/images/3.jpg');">
-                                    <h5 class="location text-uppercase">Bangalore</h5>
+                                    <h5 class="location text-uppercase">Pune</h5>
                                 </figure>
                                 <figcaption class="desc">
                                     <h3 class="title">Small title</h3>
@@ -86,7 +86,7 @@
                         <div class="col-sm-6 col-md-4">
                             <div class="card-event">
                                 <figure class="card-sm" style="background-image:url('assets/images/4.jpg');">
-                                    <h5 class="location text-uppercase">Bangalore</h5>
+                                    <h5 class="location text-uppercase">Hyderabad</h5>
                                 </figure>
                                 <figcaption class="desc">
                                     <h3 class="title">Small title</h3>
@@ -97,7 +97,7 @@
                         <div class="col-sm-6 col-md-4">
                             <div class="card-event">
                                 <figure class="card-sm" style="background-image:url('assets/images/5.jpg');">
-                                    <h5 class="location text-uppercase">Bangalore</h5>
+                                    <h5 class="location text-uppercase">New Delhi</h5>
                                 </figure>
                                 <figcaption class="desc">
                                     <h3 class="title">Small title</h3>
@@ -111,7 +111,7 @@
                             <div class="card-event">
                                 <figure class="card-lg" style="background-image:url('assets/images/11.jpg');">
                                     <figcaption class="desc">
-                                        <h5 class="location text-uppercase">Bangalore</h5>
+                                        <h5 class="location text-uppercase">Jaipur</h5>
                                         <h3 class="title">TEDx 2019</h3>
                                         <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                             Architecto, unde?</p>
@@ -124,7 +124,7 @@
                             <div class="card-event">
                                 <figure class="card-sm" style="background-image:url('assets/images/10.jpg');">
                                     <img src="assets/images/10.jpg" alt="" style="max-height: 235px" />
-                                    <h5 class="location text-uppercase">Bangalore</h5>
+                                    <h5 class="location text-uppercase">Chennai</h5>
                                 </figure>
                                 <figcaption class="desc">
                                     <h3 class="title">Small title</h3>
