--- a/strategink/who-we-are.html
+++ b/strategink/who-we-are.html
@@ -28,7 +28,7 @@
                         <a class="active" href="who-we-are.html">Who We Are</a>
                         <a href="what-we-do.html">What We Do</a>
                         <a href="what-we-done.html">What We’ve Done</a>
-                        <a href="javascript:void(0);">News & Insights</a>
+                        <!-- <a href="javascript:void(0);">News & Insights</a> -->
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
