--- a/strategink/index.html
+++ b/strategink/index.html
@@ -148,56 +148,56 @@
                 <div class="services-list-group">
                     <div class="row max-gutters">
                         <div class="col-sm-6 col-md-3">
-                            <div class="card" onclick="location.href='what-we-do.html#service1'">
+                            <div class="card hvr-radial-out" onclick="location.href='what-we-do.html#service1'">
                                 <i class="icon icon-ser-1"></i>
                                 <h3 class="title">Digital Engagement</h3>
                                 <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <div class="card" onclick="location.href='what-we-do.html#service2'">
+                            <div class="card hvr-radial-out" onclick="location.href='what-we-do.html#service2'">
                                 <i class="icon icon-ser-2"></i>
                                 <h3 class="title">MICE, Events & Symposia</h3>
                                 <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <div class="card" onclick="location.href='what-we-do.html#service3'">
+                            <div class="card hvr-radial-out" onclick="location.href='what-we-do.html#service3'">
                                 <i class="icon icon-ser-3"></i>
                                 <h3 class="title">Account Based Marketing</h3>
                                 <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <div class="card" onclick="location.href='what-we-do.html#service4'">
+                            <div class="card hvr-radial-out" onclick="location.href='what-we-do.html#service4'">
                                 <i class="icon icon-ser-4"></i>
                                 <h3 class="title">Live Events</h3>
                                 <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <div class="card" onclick="location.href='what-we-do.html#service5'">
+                            <div class="card hvr-radial-out" onclick="location.href='what-we-do.html#service5'">
                                 <i class="icon icon-ser-5"></i>
                                 <h3 class="title">Corporate Videos</h3>
                                 <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <div class="card" onclick="location.href='what-we-do.html#service6'">
+                            <div class="card hvr-radial-out" onclick="location.href='what-we-do.html#service6'">
                                 <i class="icon icon-ser-6"></i>
                                 <h3 class="title">Content & Print Services</h3>
                                 <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <div class="card" onclick="location.href='what-we-do.html#service7'">
+                            <div class="card hvr-radial-out" onclick="location.href='what-we-do.html#service7'">
                                 <i class="icon icon-ser-7"></i>
                                 <h3 class="title">Demand Generation</h3>
                                 <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-3">
-                            <div class="card" onclick="location.href='what-we-do.html#service8'">
+                            <div class="card hvr-radial-out" onclick="location.href='what-we-do.html#service8'">
                                 <i class="icon icon-ser-8"></i>
                                 <h3 class="title">Corporate Gifts & Give-aways</h3>
                                 <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
