--- a/strategink/what-we-do.html
+++ b/strategink/what-we-do.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>StrategINK | what we do</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/vendor.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 </head>
@@ -43,7 +43,7 @@
             </div>
         </section>
         <!-- WHAT WE DO -->
-        <section class="what-we-do sec-space">
+        <!-- <section class="what-we-do sec-space">
             <div class="container">
                 <div class="row" id="service1">
                     <div class="col-sm-6 col-md-8">
@@ -149,6 +149,92 @@
                                 <i class="icon icon-ser-5"></i>
                             </div>
                         </figure>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+        <section class="what-we-do sec-space">
+            <div class="container">
+                <div class="tabgroup row">
+                    <div class="col-sm-6">
+                        <ul class="nav nav-tabs row">
+                            <li class="active  col-sm-4">
+                                <a data-toggle="tab" href="#home">
+                                    <i class="icon icon-ser-1"></i>
+                                    <p>Marketing Consulting</p>
+                                    <span class="link-more">Learn More</span>
+                                </a>
+                            </li>
+                            <li class="col-sm-4">
+                                <a data-toggle="tab" href="#menu1">
+                                    <i class="icon icon-ser-2"></i>
+                                    <p>Demand Generation</p>
+                                    <span class="link-more">Learn More</span>
+                                </a>
+                            </li>
+                            <li class="col-sm-4"><a data-toggle="tab" href="#menu2"><i class="icon icon-ser-3"></i>
+                                    <p>Digital Marketing</p>
+                                    <span class="link-more">Learn More</span>
+                                </a></li>
+                            <li class="col-sm-4"><a data-toggle="tab" href="#menu3"><i class="icon icon-ser-4"></i>
+                                    <p>Marketing Collateral</p>
+                                    <span class="link-more">Learn More</span>
+                                </a></li>
+                            <li class="col-sm-4"><a data-toggle="tab" href="#menu4"><i class="icon icon-ser-5"></i>
+                                    <p>Virtual Environment</p>
+                                    <span class="link-more">Learn More</span>
+                                </a></li>
+                        </ul>
+                    </div>
+
+                    <div class="tab-content col-sm-6">
+                        <div id="home" class="tab-pane fade in active">
+                            <h3>Marketing Consulting</h3>
+                            <p>We work with you to create and implement marketing strategies. These strategies are
+                                centred on the core of the business and products and services that you offer. We help
+                                you to create a detailed marketing plan, determine the marketing message, and identify
+                                the appropriate marketing mix to get the message out. We will then follow the plan
+                                through, and work to execute and implement the marketing strategy. We will monitor
+                                results, tweak as necessary and ensure that you get the best results for your marketing
+                                investments.</p>
+                        </div>
+                        <div id="menu1" class="tab-pane fade">
+                            <h3>Demand Generation</h3>
+                            <p>StrategINK provides a comprehensive suite of demand generation services that span the
+                                entire sales lifecycle - from inquiry generation, to lead potential assessment, lead
+                                nurturing and post sales engagement, to help you build customer intimacy and expand the
+                                scope and scale of your business engagements.
+                                We not only generate measurable, actionable interest in your brand, product or service,
+                                we also help move prospects along the sales cycle, and then reinforce customer
+                                relationships over time through customised content, marketing collaterals and virtual
+                                events.</p>
+                        </div>
+                        <div id="menu2" class="tab-pane fade">
+                            <h3>Digital Marketing</h3>
+                            <p>We help customers devise a digital marketing strategy and run campaigns in line with
+                                their most important business objectives - to help generate inquiries, build sales
+                                leads, engage with consumers and key influencers, generate databases and trigger online
+                                actions (downloads, event registrations, sales). We employ effective digital marketing
+                                tools comprising engaging content (blogs, case studies, customer testimonials etc.) and
+                                popular social media channels that boast reach in millions across demographics (youth,
+                                women, luxury goods shoppers, airline travellers, cruise holiday and adventure sports
+                                enthusiasts et al) and geographical barriers (India, South Asia, South East Asia and
+                                Middle East).</p>
+                        </div>
+                        <div id="menu3" class="tab-pane fade">
+                            <h3>Marketing Collateral</h3>
+                            <p>The StrategINK expert team of designers, visualisers, copywriters and video editors have
+                                consistently produced high quality, impactful collateral for client campaigns -
+                                brochures, PoS displays, standees, exhibition booths, corporate videos and much more. We
+                                would be happy to engage on your specific requirements and help you produce and
+                                distribute the most suitable material to convey the key marketing messages for your
+                                brand, product or service.</p>
+                        </div>
+                        <div id="menu4" class="tab-pane fade">
+                            <h3>Virtual Environment</h3>
+                            <p>The StrategINK team's expertise in creating and managing virtual events includes -
+                                websites, blogs, eDMs, webinars and webcasts, podcasts and Mobile Apps.</p>
+                        </div>
                     </div>
                 </div>
             </div>
