--- a/strategink/index.html
+++ b/strategink/index.html
@@ -147,60 +147,46 @@
                 <h3 class="heading-sec">SERVICES</h3>
                 <div class="services-list-group">
                     <div class="row max-gutters">
-                        <div class="col-sm-6 col-md-3">
+                        <div class="col-sm-6 col-md-4">
                             <div class="card hvr-radial-out" onclick="location.href='what-we-do.html'">
                                 <i class="icon icon-ser-1"></i>
-                                <h3 class="title">Digital Engagement</h3>
-                                <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
+                                <h3 class="title">Marketing Consulting</h3>
+                                <p class="mb-0 desc">We work with you to create and implement marketing strategies...</p>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-3">
+                        <div class="col-sm-6 col-md-4">
                             <div class="card hvr-radial-out" onclick="location.href='what-we-do.html'">
                                 <i class="icon icon-ser-2"></i>
-                                <h3 class="title">MICE, Events & Symposia</h3>
-                                <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
+                                <h3 class="title">Demand Genaration</h3>
+                                <p class="mb-0 desc">StrategINK provides a comprehensive suite of demand generation services...</p>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-3">
+                        <div class="col-sm-6 col-md-4">
                             <div class="card hvr-radial-out" onclick="location.href='what-we-do.html'">
                                 <i class="icon icon-ser-3"></i>
-                                <h3 class="title">Account Based Marketing</h3>
-                                <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
+                                <h3 class="title">Digital Marketing</h3>
+                                <p class="mb-0 desc">We help customers devise a digital marketing strategy and run...</p>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-3">
+                        <div class="col-sm-6 col-md-4">
                             <div class="card hvr-radial-out" onclick="location.href='what-we-do.html'">
                                 <i class="icon icon-ser-4"></i>
-                                <h3 class="title">Live Events</h3>
-                                <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
+                                <h3 class="title">Marketing Collateral</h3>
+                                <p class="mb-0 desc">The StrategINK expert team of designers, visualisers, copywriters...</p>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-3">
+                        <div class="col-sm-6 col-md-4">
                             <div class="card hvr-radial-out" onclick="location.href='what-we-do.html'">
                                 <i class="icon icon-ser-5"></i>
-                                <h3 class="title">Corporate Videos</h3>
-                                <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
+                                <h3 class="title">Virtual Environment</h3>
+                                <p class="mb-0 desc">The StrategINK team's expertise in creating and managing...</p>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-3">
+                        <div class="col-sm-6 col-md-4">
                             <div class="card hvr-radial-out" onclick="location.href='what-we-do.html'">
                                 <i class="icon icon-ser-6"></i>
-                                <h3 class="title">Content & Print Services</h3>
-                                <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-3">
-                            <div class="card hvr-radial-out" onclick="location.href='what-we-do.html'">
-                                <i class="icon icon-ser-7"></i>
-                                <h3 class="title">Demand Generation</h3>
-                                <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-md-3">
-                            <div class="card hvr-radial-out" onclick="location.href='what-we-do.html'">
-                                <i class="icon icon-ser-8"></i>
-                                <h3 class="title">Corporate Gifts & Give-aways</h3>
-                                <p class="mb-0 desc">We work with you to create and implement marketing strategies.</p>
+                                <h3 class="title">Events & symposium</h3>
+                                <p class="mb-0 desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, culpa!...</p>
                             </div>
                         </div>
                     </div>
