--- a/strategink/what-we-do.html
+++ b/strategink/what-we-do.html
@@ -184,6 +184,10 @@
                                     <p>Virtual Environment</p>
                                     <span class="link-more">Learn More</span>
                                 </a></li>
+                                <li class="col-sm-4"><a data-toggle="tab" href="#menu5"><i class="icon icon-ser-6"></i>
+                                    <p>Events & symposium</p>
+                                    <span class="link-more">Learn More</span>
+                                </a></li>
                         </ul>
                     </div>
 
@@ -234,6 +238,12 @@
                             <h3>Virtual Environment</h3>
                             <p>The StrategINK team's expertise in creating and managing virtual events includes -
                                 websites, blogs, eDMs, webinars and webcasts, podcasts and Mobile Apps.</p>
+                        </div>
+                        <div id="menu5" class="tab-pane fade">
+                            <h3>Events & symposium</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore, suscipit rerum?
+                                Perspiciatis quibusdam dicta error necessitatibus? Ratione ad inventore, dolore, dolores
+                                sunt quo minus numquam laboriosam quia, sed consectetur suscipit?</p>
                         </div>
                     </div>
                 </div>
