--- a/index.html
+++ b/index.html
@@ -89,6 +89,23 @@
             </div>
         </div>
         <div class="card mb-4 box-shadow">
+            <img class="card-img-top" src="multifilter-thumb.PNG" alt="Todo App">
+            <div class="card-body">
+                <h5 class="card-title">Multifilter App</h5>
+                <p class="card-text">
+                    A filter intercation with range inputs based on checkbox
+                </p>
+            </div>
+            <div class="card-footer d-flex justify-content-between align-items-center">
+                <small class="text-muted">HTML5, JqueryUI, Bootstrap4, Flexbox</small>
+                <div class="btn-group">
+                    <a href="https://aadil59.github.io/multifilter" class="btn btn-sm btn-outline-danger" target="_blank">
+                        View
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-4 box-shadow">
             <img class="card-img-top" src="thumb-5.png" alt="Calculator Site">
             <div class="card-body">
                 <h5 class="card-title">Campaign Scheduler</h5>
