--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="card-footer d-flex justify-content-between align-items-center">
                 <small class="text-muted">ES6, Fetch API, JSON, CSS3, Gulp</small>
                 <div class="btn-group">
-                    <a href="https://aadil59.github.io/schedule-campaign" class="btn btn-sm btn-outline-danger" target="_blank">
+                    <a href="https://aadil59.github.io/campaign_scheduler" class="btn btn-sm btn-outline-danger" target="_blank">
                         View
                     </a>
                 </div>
